--- a/v3.1.1/changelog.txt
+++ b/v3.1.1/changelog.txt
@@ -2,6 +2,10 @@
 by Parent and Childset Accessible Syntax Tree Language Interpreter change log
 -----------------------------------------------------------------------------
 
+v3.1.1   2016-01-08
+
+Fixed the built trees garbage collection issue.
+
 v3.1   2016-01-05
 
 Added modulo (%) operator.
