--- a/v3.4/changelog.txt
+++ b/v3.4/changelog.txt
@@ -2,10 +2,14 @@
 by Parent and Childset Accessible Syntax Tree Language Interpreter change log
 -----------------------------------------------------------------------------
 
-v3.4
+v3.4   2016-03-31
 
 Minimized the number of internal calls to exit.
 Added internal function "copystring", "freestring" and "fgets".
+Added parameter for context access in pcastli.ini.
+Now the internal function "clear" frees arrays, lists and objects, but no more 
+   the strings.
+Windows builds are now compiled for Windows 10 instead of 8.
 Fixed memory leaks in libraries calls, printf, scanf, fprintf, fscanf, sprintf 
    and sscanf for 64-bit builds.
 
