--- a/v3.4/changelog.txt
+++ b/v3.4/changelog.txt
@@ -2,7 +2,7 @@
 by Parent and Childset Accessible Syntax Tree Language Interpreter change log
 -----------------------------------------------------------------------------
 
-v3.4   2016-03-31
+v3.4   2016-04-02
 
 Minimized the number of internal calls to exit.
 Added internal function "copystring", "freestring" and "fgets".
@@ -15,7 +15,7 @@ Fixed memory leaks in libraries calls, printf, scanf, fprintf, fscanf, sprintf
 
 v3.3   2016-01-31
 
-Remplaced member "nb_childs" by "nb_children" in the object retournd by "info".
+Replaced member "nb_childs" by "nb_children" in the object retournd by "info".
 Added internal functions "detachnode", "swapnodes" and "osfamily".
 Now function "treetocode" places a semicolon at the end previous statement in 
    a statement list if next statements begins with * or (.
